improved tests + created a new Stripe service